@@ -1,3 +1,5 @@
+HEAD
+    + Changed outdated message, to avoid befuddle users
 1.3.13
     + Changed location of freshclam state file, maybe it could solve
       some notification errors in some installations
